# ITT-Orchestrator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  App.tsx  BACKEND_BUILD_HELP.md  COMPLETION_STATUS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILE_INDEX.md  FINAL_SETUP.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_STATUS.md  INSTALL_VS_BUILD_TOOLS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DELIVERY_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PROD.md  RELEASE_NOTES.md  SESSION_SUMMARY.md  build_log.txt  build_log_2.txt  constants.ts  docker-compose.prod.yml  docker-compose.yml  index.html  metadata.json  openapi.yml  package-lock.json  package.json  quickstart.bat  quickstart.sh  server.ts  types.ts  users.json  vite.config.ts
.agents/workflows/: itt-orchestrator.md
.github/workflows/: ci-cd.yml
backend/crates/edge_agent/: Cargo.toml
backend/crates/edge_agent/src/: lib.rs
backend/crates/itt_api/: Cargo.toml
backend/crates/itt_api/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  models.rs  rate_limit.rs  report_store.rs  routes.rs  setup.rs  socket.rs  user_store.rs
backend/crates/itt_core/: Cargo.toml
backend/crates/itt_core/src/: lib.rs  mcp_tool_registry.rs
backend/crates/itt_edge/: Cargo.toml
backend/crates/itt_edge/src/: lib.rs
backend/crates/itt_federation/: Cargo.toml
backend/crates/itt_federation/src/: aggregator.rs  gvm.rs  learner.rs  lib.rs  privacy.rs
backend/crates/itt_identity/: Cargo.toml
backend/crates/itt_identity/src/: lib.rs  models.rs
backend/crates/itt_integrations/: Cargo.toml
backend/crates/itt_integrations/src/: vault.rs
backend/crates/itt_intent/: Cargo.toml
backend/crates/itt_intent/src/: lib.rs  tiny_transformer.rs
backend/crates/itt_memory/: Cargo.toml
backend/crates/itt_memory/src/: lib.rs  models.rs  seeder.rs
backend/crates/itt_middleware/: Cargo.toml
backend/crates/itt_middleware/src/: arbitrage.rs  error.rs  firewall.rs  governance.rs  gvm.rs  ironclaw.rs  lib.rs  polyglot.rs  privacy.rs  secure_sandbox.rs  toon.rs
backend/crates/itt_privacy/: Cargo.toml
backend/crates/itt_privacy/src/: lib.rs
deploy/helm/itt-orchestrator/: Chart.yaml  README.md  values-prod.yaml  values.yaml
deploy/helm/itt-orchestrator/templates/: NOTES.txt  _helpers.tpl  configmap-otel.yaml  deployment-api.yaml  deployment-frontend.yaml  deployment-jaeger.yaml  deployment-otel.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service-api.yaml  service-frontend.yaml  service-jaeger.yaml  service-mongodb.yaml  service-neo4j.yaml  service-otel.yaml  serviceaccount.yaml  statefulset-mongodb.yaml  statefulset-neo4j.yaml
docker/: mongo-init.js  neo4j-init.cypher  otel-collector-config.yaml
sdk/agent-socket-rs/: Cargo.toml
sdk/agent-socket-rs/src/: lib.rs  protocol.rs
sdk/agent-socket-rs/src/adapters/: mcp_adapter.rs  mod.rs  mq_adapter.rs  tcp_adapter.rs
sdk/agent-socket-rs/src/runtimes/: direct.rs  mod.rs  relay.rs
src/api/: client.ts  mockData.ts
src/components/: Layout.tsx
src/components/canvas/: AgentBuilder.tsx  CustomNodes.tsx  SpanTimeline.tsx
src/hooks/: useJaegerSpans.ts
src/pages/: AgentPortfolio.tsx  ApiRegistry.tsx  CustomReport.tsx  Dashboard.tsx  ExecutionPlanes.tsx  GVSCalculator.tsx  Identity.tsx  Integrations.tsx  IntentManifests.tsx  Login.tsx  MDM.tsx  MultiTenantIAM.tsx  PolicyManagement.tsx  Protocols.tsx  ReportBuilder.tsx  Settings.tsx  Setup.tsx  ZoneManagement.tsx
src/store/: authStore.ts  orchestratorStore.ts
src/types/: index.ts
