[package]
name = "agent-socket-rs"
version = "0.1.0"
edition = "2021"
description = "Agent Socket Protocol SDK: Decoupled telemetry and intent-routing standard"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
tokio-tungstenite = "0.21"
bincode = "1.3"
futures-util = "0.3"
