[package]
name = "itt_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace", "cors"] }
http = "1.1"
bytes = "1.7"
http-body-util = "0.1"
futures-util = "0.3"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
dotenv = "0.15"
dotenvy = "0.15"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
itt_memory = { path = "../itt_memory" }
itt_privacy = { path = "../itt_privacy" }
itt_intent = { path = "../itt_intent" }
itt_federation = { path = "../itt_federation" }
itt_middleware = { path = "../itt_middleware" }
itt_core = { path = "../itt_core" }
agent-socket-rs = { path = "../../../sdk/agent-socket-rs" }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
bcrypt = "0.15"
