[package]
name = "itt_federation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
rand = "0.8"
tfhe = { version = "0.7", features = ["integer"] }
bincode = "1.3"
itt_middleware = { path = "../itt_middleware" }
