[package]
name = "itt_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
tracing = "0.1"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
openidconnect = "3.5"
