[package]
name = "itt_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
neo4rs = "0.7"
futures = "0.3"