[package]
name = "itt_middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
wasmtime = "20.0.0"
serde_json = "1.0"
